--- a/webapps/calendarWeb/src/app/pages/dashboard/dashboard.component.scss
+++ b/webapps/calendarWeb/src/app/pages/dashboard/dashboard.component.scss
@@ -67,4 +67,32 @@
     flex: 1;
     padding: 2rem;
   }
+
+.user-info {
+  text-align: center;
   
+  .username, 
+  .role {
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: 0.3em;
+  }
+  
+  .logout-wrapper {
+    margin-top: 10px;
+    
+    .logout-btn {
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+}
