--- a/webapps/calendarWeb/src/app/pages/login/login.component.html
+++ b/webapps/calendarWeb/src/app/pages/login/login.component.html
@@ -1,10 +1,6 @@
 <div class="login-container">
-  <h2 class="title">
-    {{ isRegistering ? "Registrar Usuario" : "Iniciar Sesión" }}
-  </h2>
-
-  <!-- Formulario de Login -->
-  <form *ngIf="!isRegistering" (ngSubmit)="login()">
+  <h2 class="title">Iniciar Sesión</h2>
+  <form (ngSubmit)="login()">
     <div class="form-group">
       <label for="username">Usuario:</label>
       <input
@@ -28,81 +24,9 @@
     <button type="submit" class="btn-login" [disabled]="loading">
       {{ loading ? "Cargando..." : "Ingresar" }}
     </button>
-    <button
-      type="button"
-      class="btn-register"
-      (click)="showRegisterForm()"
-      [disabled]="loading"
-    >
-      Registrarse
-    </button>
   </form>
 
-  <!-- Formulario de Registro -->
-  <form *ngIf="isRegistering" (ngSubmit)="register()">
-    <div class="form-group">
-      <label for="reg-username">Usuario:</label>
-      <input
-        id="reg-username"
-        type="text"
-        [(ngModel)]="registerData.username"
-        name="reg-username"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="reg-password">Contraseña:</label>
-      <input
-        id="reg-password"
-        type="password"
-        [(ngModel)]="registerData.password"
-        name="reg-password"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="reg-email">Email:</label>
-      <input
-        id="reg-email"
-        type="email"
-        [(ngModel)]="registerData.email"
-        name="reg-email"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="reg-rol">Rol:</label>
-      <input
-        id="reg-rol"
-        type="text"
-        [(ngModel)]="registerData.role"
-        name="reg-rol"
-        required
-      />
-    </div>
-    <button type="submit" class="btn-register" [disabled]="loading">
-      {{ loading ? "Cargando..." : "Registrar" }}
-    </button>
-    <button
-      type="button"
-      class="btn-login"
-      (click)="showLoginForm()"
-      [disabled]="loading"
-    >
-      Volver al Login
-    </button>
-  </form>
-
-  <!-- Mensajes de respuesta o error -->
   <div class="login-response" *ngIf="errorMessage">
     <p class="error-message">{{ errorMessage }}</p>
-  </div>
-
-  <div class="login-response" *ngIf="!isRegistering && loginResponse">
-    <p class="response-message">{{ loginResponse.message }}</p>
-  </div>
-
-  <div class="login-response" *ngIf="isRegistering && registerResponse">
-    <p class="response-message">{{ registerResponse.message }}</p>
   </div>
 </div>
